--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: asyncy
-version: 0.0.7
+version: 0.0.8
 summary: Asyncy CLI
 description: Asyncy CLI
 grade: devel
@@ -15,12 +15,26 @@ parts:
     plugin: python
     python-version: python3
     python-packages:
+    - certifi==2018.4.16
+    - chardet==3.0.4
     - click==6.7
+    - click-completion==0.3.1
+    - click-didyoumean==0.0.3
     - click-spinner==0.1.8
     - delegator.py==0.1.0
     - emoji==0.5.0
+    - idna==2.7
+    - Jinja2==2.10
+    - lark-parser==0.5.6
+    - MarkupSafe==1.0
     - mixpanel==4.3.2
+    - pexpect==4.6.0
+    - prompt-toolkit==2.0.3
+    - ptyprocess==0.6.0
     - Pygments==2.2.0
     - raven==6.9.0
     - requests==2.19.1
-    - storyscript==0.1.2
+    - six==1.11.0
+    - storyscript==0.1.6
+    - urllib3==1.23
+    - wcwidth==0.1.7
