more project setup

--- a/tox.ini
+++ b/tox.ini
@@ -26,5 +26,5 @@ deps =
 commands =
     flake8 \
       --max-complexity=10 \
-      --ignore N802,F401,I202,I201,I100,N806,E722 \
+      --ignore F401,F403,I201 \
       --exclude=./build,venv,.venv,.tox,dist,setup.py,scripts
