--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-click-alias==0.1.1a3
+click-alias==0.1.1a1
 click-didyoumean==0.0.3
 click-help-colors==0.4
 click-spinner==0.1.8
@@ -10,4 +10,4 @@ prompt-toolkit==2.0.3
 Pygments==2.2.0
 raven==6.9.0
 requests==2.19.1
-storyscript==0.1.6
+storyscript>=0.2.0
