--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
     build:
         working_directory: ~/repo
         docker:
-            - image: circleci/python:3.6.1
+            - image: circleci/python:3.7.0-node
         steps:
             - checkout
             - restore_cache:
