--- a/tox.ini
+++ b/tox.ini
@@ -26,5 +26,5 @@ deps =
 commands =
     flake8 \
       --max-complexity=10 \
-      --ignore F401,F403,I201 \
+      --ignore F401,F403,I201,E722 \
       --exclude=./build,venv,.venv,.tox,dist,setup.py,scripts
