Add datetime to excluded.

--- a/tox.ini
+++ b/tox.ini
@@ -27,4 +27,4 @@ commands =
     flake8 \
       --max-complexity=10 \
       --ignore F401,F403,I201,E722 \
-      --exclude=./build,venv,.venv,.tox,dist,setup.py,scripts
+      --exclude=./build,venv,.venv,.tox,dist,setup.py,scripts,./cli/helpers/datetime.py
