Lock down versions of flake8.

--- a/tox.ini
+++ b/tox.ini
@@ -18,10 +18,10 @@ commands =
 
 [testenv:pep8]
 deps =
-    flake8
-    flake8-quotes
-    flake8-import-order
-    pep8-naming
+    flake8==3.5.0
+    flake8-quotes==1.0.0
+    flake8-import-order==0.18
+    pep8-naming==0.7.0
     -rrequirements.txt
 commands =
     flake8 \
